// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider[Base] should render correctly  1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c826gt3 soui-divider-wrapper c9k0rz4 soui-divider-horizontal"
  />
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about text 1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c826gt3 soui-divider-wrapper c9k0rz4 soui-divider-horizontal c-ff9lkh soui-divider-with-text c-18lyrg soui-divider-with-text-center"
  >
    <span
      class="c-4kwvo9 soui-divider-inner-text"
    >
      Center
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c826gt3 soui-divider-wrapper c9k0rz4 soui-divider-horizontal c-ff9lkh soui-divider-with-text cbb88ja soui-divider-with-text-left"
  >
    <span
      class="c-4kwvo9 soui-divider-inner-text"
    >
      Left
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c826gt3 soui-divider-wrapper c9k0rz4 soui-divider-horizontal c-ff9lkh soui-divider-with-text c-4e3l83 soui-divider-with-text-right"
  >
    <span
      class="c-4kwvo9 soui-divider-inner-text"
    >
      Right
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about vertical 1`] = `
<span
  style="display: inline-block; line-height: 22px; font-size: 14px;"
>
  Item 1
</span>
`;
